logs/lettuce-updated.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/extras'...
Listing './lib/python3.5/site-packages/extras/tests'...
Listing './lib/python3.5/site-packages/extras-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/fixtures'...
Listing './lib/python3.5/site-packages/fixtures/_fixtures'...
Listing './lib/python3.5/site-packages/fixtures/tests'...
Listing './lib/python3.5/site-packages/fixtures/tests/_fixtures'...
Listing './lib/python3.5/site-packages/fixtures-3.0.0.dist-info'...
Listing './lib/python3.5/site-packages/fuzzywuzzy'...
Listing './lib/python3.5/site-packages/fuzzywuzzy-0.16.0.dist-info'...
Listing './lib/python3.5/site-packages/lettuce'...
Compiling './lib/python3.5/site-packages/lettuce/__init__.py'...
***   File "./lib/python3.5/site-packages/lettuce/__init__.py", line 174
    print "Error loading step definitions:\n", e
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/lettuce/core.py'...
***   File "./lib/python3.5/site-packages/lettuce/core.py", line 42
    first_of = re.compile(ur'^first_of_')
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/lettuce/django'...
Listing './lib/python3.5/site-packages/lettuce/django/mail'...
Listing './lib/python3.5/site-packages/lettuce/django/management'...
Listing './lib/python3.5/site-packages/lettuce/django/management/commands'...
Compiling './lib/python3.5/site-packages/lettuce/django/server.py'...
***   File "./lib/python3.5/site-packages/lettuce/django/server.py", line 294
    print "%s..." % msg
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/lettuce/django/steps'...
Compiling './lib/python3.5/site-packages/lettuce/django/steps/models.py'...
***   File "./lib/python3.5/site-packages/lettuce/django/steps/models.py", line 186
    print '%s=%s,' % (field.name, str(getattr(model, field.name))),
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/lettuce/django/tests'...
Listing './lib/python3.5/site-packages/lettuce/django/tests/functional'...
Listing './lib/python3.5/site-packages/lettuce/django/tests/unit'...
Listing './lib/python3.5/site-packages/lettuce/plugins'...
Compiling './lib/python3.5/site-packages/lettuce/registry.py'...
***   File "./lib/python3.5/site-packages/lettuce/registry.py", line 155
    print "=" * 1000
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/lettuce_updated-0.2.21.egg-info'...
Listing './lib/python3.5/site-packages/linecache2'...
Listing './lib/python3.5/site-packages/linecache2/tests'...
Listing './lib/python3.5/site-packages/linecache2-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/mock'...
Listing './lib/python3.5/site-packages/mock/tests'...
Listing './lib/python3.5/site-packages/mock-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_mimeparse-1.6.0.dist-info'...
Listing './lib/python3.5/site-packages/python_subunit-1.2.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/subunit'...
Listing './lib/python3.5/site-packages/subunit/tests'...
Listing './lib/python3.5/site-packages/sure'...
Listing './lib/python3.5/site-packages/sure-1.4.7.dist-info'...
Listing './lib/python3.5/site-packages/testtools'...
Compiling './lib/python3.5/site-packages/testtools/_compat2x.py'...
***   File "./lib/python3.5/site-packages/testtools/_compat2x.py", line 16
    raise exc_class, exc_obj, exc_tb
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/testtools/matchers'...
Listing './lib/python3.5/site-packages/testtools/testresult'...
Listing './lib/python3.5/site-packages/testtools/tests'...
Listing './lib/python3.5/site-packages/testtools/tests/matchers'...
Listing './lib/python3.5/site-packages/testtools/tests/twistedsupport'...
Listing './lib/python3.5/site-packages/testtools/twistedsupport'...
Listing './lib/python3.5/site-packages/testtools-2.3.0.dist-info'...
Listing './lib/python3.5/site-packages/traceback2'...
Listing './lib/python3.5/site-packages/traceback2/tests'...
Listing './lib/python3.5/site-packages/traceback2-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/unittest2'...
Listing './lib/python3.5/site-packages/unittest2/test'...
Listing './lib/python3.5/site-packages/unittest2-1.1.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
